--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tabler/icons-react": "^3.12.0",
     "axios": "^1.7.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
